--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ h3
 .time
 {
     font-size: 30px;
+    color: white;
 }
 
 @media (width>480px) {
@@ -181,12 +182,14 @@ h3
     .card-container
     {
         display: grid;
-        grid-template-columns: 200px 200px 200px 200px;
-        grid-template-rows: auto;
+        grid-template-columns: 200px 200px 200px;
+        grid-template-rows: 2;
        grid-template-areas:
-        " work play study"
-        " exercise social selfcare";
+        "work play study"
+        "exercise social selfcare";
         grid-area: card;
+        row-gap: 20px;
+        column-gap: 30px;
     }
     main
     { 
@@ -196,6 +199,7 @@ h3
        grid-template-areas:
         "profile card card card"
         "profile card card card";
+        
     }
     .profile
     {
@@ -222,30 +226,51 @@ h3
     .card-1
     {   
         grid-area: work;
+        background-position: 90% -10%;
     }
     .card-2
     {
         grid-area: play;
+        background-position: 90% -10%;
+
     }
     .card-3
     {
         grid-area: study;
+        background-position: 90% -10%;
+
     }
     .card-4
     {
         grid-area: exercise;
+        background-position: 90% -10%;
     }
     .card-5
     {
         grid-area: social;
+        background-position: 90% -10%;
     }
     .card-6
     {
-        grid-area:selfcare;
+        grid-area:selfcare;        background-position: 90% -10%;
     }
     .buttons
     {
         flex-direction: column;
         align-items: flex-start;
+    }
+    .card-time
+    {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 20px;
+    }
+    .time
+    {
+        font-size: 3.5rem;
+    }
+    .card-text
+    {
+        gap: 20px;
     }
 }
